test/sema/typeck/module/enum-value-not-accessible.out
error: element is not accessible.
--> enum-value-not-accessible.dora:1:10
 | fn f() { foo::A; }
            ~~~~~~
 | mod foo { enum Foo { A, B } use self::Foo::A; }
 | 
1 error found.
