test/sema/typeck/module/enum-value-not-accessible.dora
fn f() { foo::A; }
mod foo { enum Foo { A, B } use self::Foo::A; }
